--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-tests
 cache
 gpyg/gpgme
+gpg
 gpyg/gpgme.prefix
