--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,25 +1,13 @@
-name: Publish docs via GitHub Pages
+name: build
 on:
   - workflow_dispatch
 jobs:
-  build:
-    name: Deploy docs
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout main
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
-          python-version: '3.12.2'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-
-      - name: Deploy docs
-        uses: mhausenblas/mkdocs-deploy-gh-pages@nomaterial
-        # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CONFIG_FILE: mkdocs.yml
-          REQUIREMENTS: requirements.txt
+          python-version: 3.12.2
+      - run: pip install mkdocs pydantic typing-extensions mkdocstrings[python]
+      - run: mkdocs gh-deploy --force --clean --verbose
